--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-strap": "^1.1.36"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
